fix: Update tbl-container styles for improved overflow handling and height management

--- a/src/styles/mor.css
+++ b/src/styles/mor.css
@@ -13894,10 +13894,10 @@ input[type="checkbox"] {
 
 .tbl-container {
   box-shadow: 0px 2.8828866481781006px 7.687697887420654px 0px #0000003D;
-  overflow: auto;
-  height: max-content;
-  /*  max-height: 300px;*/
+  overflow-y: auto !important;
+  max-height: 300px !important;
   margin: 10px 0;
+  height: auto !important;
 }
 
 .select2-container {
